--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     flex-direction: column;
 }
 
-img, p, h1, h2 {
+* {
     margin: 0;
 }
 
@@ -96,9 +96,10 @@ h2 {
 }
 
 .attribution {
-    font-size: 11px;
+    position: absolute;
+    bottom: 30px;
+    font-size: 15px;
     text-align: center;
-    margin-top: 15px;
     color: hsla(0, 0%, 100%, 0.75);
 }
 
@@ -107,10 +108,10 @@ h2 {
 }
 
 @media (max-width: 1100px) {
-
     body {
         height: auto;
         padding: 88px 24px;
+        position: relative;
     }
 
     .card {
